[package]
name = "wasm-dev-book-hello-wasm"
version = "0.1.0"
authors = ["iyonaga <yiyonaga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinymt = { git = "https://github.com/mizdra/rust-tinymt", tag = "0.1.0" }

[lib]
crate-type = ["cdylib"]
